# jetson-power-monitor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README_CN.md  pyproject.toml  setup.py
.github/: toolchain-arm64.cmake
.github/workflows/: build-python-wheel.yml  build-ubuntu-deb.yml  publish-cargo.yml
bindings/python/: CMakeLists.txt  jetpwmon_pybind.cpp
bindings/rust/: .gitignore  Cargo.toml  build.rs
bindings/rust/examples/: basic.rs  cpu_monitor.rs  matrix_multiply.rs
bindings/rust/src/: bridge.cpp  lib.rs
bindings/rust/tests/: test.rs
cmake/: jetpwmon-config.cmake.in  jetpwmon.pc.in
example/: c_example.c  cpp_example.cpp  matrix_multiply.c  matrix_multiply.cpp  matrix_multiply_cpp.cpp  python_example.py
examples/: matrix_multiply.c
include/jetpwmon/: jetpwmon++.hpp  jetpwmon.h
python/jetpwmon/: __init__.py  cli.py
src/: jetpwmon++.cpp  jetpwmon.c  jetpwmon_cli.c
tests/: test.py  test_c_api.cpp  test_cpp_api.cpp
