[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "jetpwmon"
version = "0.1.0"
description = "A simple power monitor for Jetson"
authors = [
    { name = "Qi Deng", email = "dengqi935@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.9.0"] 

[tool.scikit-build.cmake]
verbose = true
[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_TESTS = "OFF"
BUILD_CLI = "ON"
SKBUILD="ON"
