[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "jetpwmon"
version = "0.1.0"
description = "A simple power monitor for Jetson"
authors = [
    { name = "Qi Deng", email = "dengqi935@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.9.0"] 

[tool.scikit-build.cmake]
verbose = true
[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_TESTS = "OFF"
BUILD_CLI = "ON"
SKBUILD="ON"

# cibuildwheel specific configuration
[tool.cibuildwheel]
# Dependencies to install before building
before-build = "pip install pybind11 scikit-build-core"
# Test command - if testing is desired
test-command = "python -c \"import jetpwmon; print(dir(jetpwmon))\""
# Skip tests - may be slow on emulators
test-skip = "*"
# System packages that may be needed in manylinux containers
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"