[package]
name = "jetpwmon"
version = "0.1.0"
edition = "2021"
authors = ["Qi Deng <dengqi935@gmail.com>"]
description = "Rust bindings for Jetson Power Monitor"
license = "BSD-3-Clause"

[dependencies]
libc = "0.2"
rand = "0.8"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
ndarray = "0.16.1"

[[example]]
name = "matrix_multiply"
path = "examples/matrix_multiply.rs"

[[example]]
name = "cpu_monitor"
path = "examples/cpu_monitor.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
